# Aiohttp_homework

./: Dockerfile  app.py  db_config.py  docker-compose.yml  models.py  pyproject.toml  readme.md  requirements.txt  views.py
tests/: conftest.py  test_api.py
