[tool.poetry]
name = "aiohttp-homework"
version = "0.1.0"
description = ""
authors = ["Варов Михаил <8605495@mail.ru>"]
readme = "README.md"
packages = [{include = "aiohttp_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.45"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
asyncpg = "^0.27.0"
requests = "^2.28.1"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
